--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">22100213_proyectoIntegrador_Logarismos</string>
+    <string name="app_name">Logarismos</string>
 </resources>
